fix: resolve align issue

--- a/css/components/member.css
+++ b/css/components/member.css
@@ -68,9 +68,10 @@
 
 .member {
   width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
 }
 
